# Aurio

./: .gitignore  install-deps.ps1  install-deps.sh
.github/workflows/: ci.yml
nativesrc/: CMakeLists.txt
nativesrc/pffft/: CMakeLists.txt  CMakePresets.json
src/Aurio/: Aurio.csproj
src/Aurio.PFFFT/: Aurio.PFFFT.csproj  Interop64.cs  PFFFT.Build.targets
